<resources>
    <string name="app_name">KotlinWhatsApp</string>
    <string name="enter_email">Enter email</string>
    <string name="create_account">Create a New Account</string>
    <string name="password">Password</string>
    <string name="welcome_text">Welcome to Whatsup clone!</string>
    <string name="have_account">Already Have Account</string>
    <string name="need_account">Need a New Account?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="change_pic">Change picture</string>
    <string name="change_status">Change status</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_status">Enter your status</string>
    <string name="logout">Logout</string>
    <string name="setting">Settings</string>
    <string name="display_name">Display name</string>
    <string name="update_status">Update Status</string>
    <string name="status">Status ...</string>
    <string name="send_message">Send message</string>
</resources>
