<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.SettingsActivity"
        android:background="@color/darkBg"
        >

    <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="@dimen/_155sdp"
            android:layout_height="@dimen/_129sdp"
            android:layout_marginTop="@dimen/_30sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/profile_img"
            />

    <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/display_name"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/profile_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_30sdp"
            />

    <TextView
            android:id="@+id/profile_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/profile_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_30sdp"
            />

    <Button
            android:id="@+id/btn_change_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_pic"
            app:layout_constraintTop_toBottomOf="@+id/profile_status"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_20sdp"
            android:stateListAnimator="@drawable/state_list_animator_z"
            android:background="@drawable/bt_shape"
            android:backgroundTint="@color/colorPrimary"
            android:textAllCaps="false"
            />

    <Button
            android:id="@+id/btn_change_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_status"
            app:layout_constraintTop_toBottomOf="@+id/btn_change_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_6sdp"
            android:stateListAnimator="@drawable/state_list_animator_z"
            android:background="@drawable/bt_shape"
            android:backgroundTint="@color/colorPrimary"
            android:textAllCaps="false"
            />

</androidx.constraintlayout.widget.ConstraintLayout>