<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".activities.StatusActivity"
        android:background="@drawable/bg"
        >

    <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:layout_margin="@dimen/_6sdp"
            app:cardElevation="@dimen/_15sdp"
            app:cardCornerRadius="@dimen/_6sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:cardUseCompatPadding="true"
            >

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginLeft="@dimen/_8sdp"
                >

            <ImageView
                    android:id="@+id/img_whats"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_90sdp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/et_email"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:src="@drawable/chat_icon"
                    />

            <TextView
                    android:id="@+id/et_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/img_whats"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="@string/enter_status"
                    android:textColor="@color/black"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:drawableStart="@drawable/ic_status"
                    android:drawablePadding="@dimen/_3sdp"
                    android:gravity="center"
                    />


            <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/et_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/et_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:hint="@string/status"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:inputType="textPersonName"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelAnimating="true"
                    app:met_floatingLabelTextColor="@color/colorPrimary"
                    app:met_floatingLabelPadding="@dimen/_3sdp"
                    />


            <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_update_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    app:layout_constraintTop_toBottomOf="@+id/et_status"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:ems="12"
                    android:backgroundTint="@color/colorPrimary"
                    app:rippleColor="@color/colorPrimary"
                    android:text="@string/update_status"
                    android:stateListAnimator="@drawable/state_list_animator_z"
                    android:textColor="@color/white"
                    app:strokeColor="@color/white"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:textAllCaps="false"
                    />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>